--- a/styles/styleOne.css
+++ b/styles/styleOne.css
@@ -59,7 +59,7 @@
     align-items: center;
 }
 
-.section_content{
+.section_content {
     width: 520px;
 }
 
@@ -94,13 +94,145 @@
     font-weight: 400;
     line-height: 26px;
 }
-.item_list li::before{
+
+.item_list li::before {
     content: '✔';
     color: green;
     position: absolute;
     left: 0;
     right: 0;
-    
+
 }
 
 /* failures year related style end */
+
+/* My plans related style start */
+.plan_container {
+    display: block;
+    margin: auto;
+    max-width: 1280px;
+    margin: 68px auto;
+    align-items: center;
+}
+
+.plan_content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.plan_items {
+    text-align: center;
+    align-items: center;
+}
+
+.plan_title {
+    color: #151414;
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 58px;
+    margin-top: 120px;
+}
+
+.plan_item_title {
+    margin-top: 24px;
+    margin-bottom: 16px;
+    color: #151414;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.plan_item_des {
+    margin-top: 0px;
+    color: #737272;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+/* My plans related style end */
+
+/* Call now section related style start */
+.contact {
+    background-image: url('../images/callbg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: auto;
+    max-width: 1280px;
+    padding-top: 64px;
+    margin-bottom: 100px;
+    border-radius: 10px;
+
+
+}
+
+.contact_title {
+    color: #FFF;
+    font-size: 40px;
+    font-weight: 700;
+    /* margin-top: 64px; */
+    margin: 0px 0px 24px 64px;
+    text-transform: capitalize;
+    width: 459px;
+}
+
+.btn-callNow {
+    color: #F15B22;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+    padding: 20px 36px;
+    border-radius: 5px;
+    background: #FFF;
+    margin-left: 64px;
+    margin-bottom: 64px;
+}
+
+/* Call now section related style end */
+
+
+/* footer section related style start */
+
+.footer_section {
+    display: flex;
+    margin: auto;
+    /* max-width: 1280px; */
+    padding: 130px 320px;
+    gap: 120px;
+    background-color: #151414;
+
+}
+
+.footer_column {
+    width: 50%;
+}
+
+.footer_title {
+    color: #F8F8F8;
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
+.footer_des {
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 0s;
+    margin-bottom: 24px;
+}
+
+.footer_info{
+    color: #FFF;
+font-family: "Work Sans";
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+margin-top: 0;
+margin-bottom: 18px;
+}
+
+/* footer section related style end */
